[package]
name = "spoon_bot"
version = "1.2.0"
description = "bot that automatically helps you with your spoon related problems"
authors = ["zmxhawrhbg <25387744+Zmxhawrhbg@users.noreply.github.com>"]
edition = "2018"

[badges]
maintenance = { status = "as-is" }

[dependencies]
serenity = "0.6.0-rc.1"
dotenv = "0.14.1"
